--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">rainbow</string>
+    <string name="app_name" translatable="false">rainbow</string>
+    <string name="navigation_home">home</string>
+    <string name="navigation_user">user</string>
+    <string name="navigation_discovery">discovery</string>
 </resources>
