--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,4 +3,5 @@
     <string name="navigation_home">主页</string>
     <string name="navigation_user">用户</string>
     <string name="navigation_discovery">发现</string>
+    <string name="mine">我的</string>
 </resources>
