--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="navigation_home">home</string>
     <string name="navigation_user">user</string>
     <string name="navigation_discovery">discovery</string>
+    <string name="mine">mine</string>
 </resources>
