--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="navigation_user">user</string>
     <string name="navigation_discovery">discovery</string>
     <string name="mine">mine</string>
+    <string name="title_activity_setting">SettingActivity</string>
 </resources>
