--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -38,4 +38,5 @@
     <string name="bluetooth_already_closed">蓝牙已经关闭</string>
     <string name="scan_bluetooth_need_open_bluetooth">扫描需要打开蓝牙开关</string>
     <string name="all_uuid_service">所有服务</string>
+    <string name="navigation_more">更多</string>
 </resources>
